--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,12 @@
 <button [disabled]="clicked" (click)="handleClick()">Click Me!</button>
 
 <div *ngFor="let person of persons">
-    <h3>{{ person.name }}</h3>
+    <h3 [ngClass]="{
+        'blue': person.name === 'Ammar Hakimi',
+        'purple': person.name === 'Arfah Diyanah'
+    }">
+        {{ person.name }}
+    </h3>
     <p>Age: {{person.age }}</p>
     <p>Star Sign: {{person.starSign }}</p>
     <br>
