Customer magnifier Directive to Change Image Size

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,6 +9,8 @@
     }">
         {{ person.name }}
     </h3>
+    <img [src]="person.img" appMagnifier>
+    <figcaption>Click picture to change size!</figcaption>
     <p>Age: {{person.age }}</p>
     <p>Star Sign: {{person.starSign }}</p>
     <br>
