--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,16 +2,6 @@
 
 <button [disabled]="clicked" (click)="handleClick()">Click Me!</button>
 
-<div *ngFor="let person of persons | async">
-    <h3 [ngClass]="{
-        'blue': person.name === 'Ammar Hakimi',
-        'purple': person.name === 'Arfah Diyanah'
-    }">
-        {{ person.name }}
-    </h3>
-    <img [src]="person.img" appMagnifier>
-    <figcaption>Click picture to change size!</figcaption>
-    <p>Age: {{person.age }}</p>
-    <p>Star Sign: {{person.starSign }}</p>
-    <br>
-</div>
+<!-- Calling person component on home -->
+<!-- Make code more predictive and clean -->
+<app-person></app-person>
